...
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/cb_link_all_providers" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvLinkedAccounts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margin_medium"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
...
            android:padding="@dimen/content_margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:baselineAligned="false"
                android:enabled="@{viewModel.saveEnabled}"
                android:onClick="@{() -> viewModel.onClickSave()}"
...
