...
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_cancel"
                    android:drawablePadding="@dimen/content_padding_medium"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_medium"
                    android:cursorVisible="false"
                    android:id="@+id/tv_selected_provider"
                    android:onClick="@{clickHandler::onClearSelectionClick}"
                    android:text="@{selectedProviderName}"
                    style="@style/TextInputEditText"/>

            </LinearLayout>

...
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintLeft_toLeftOf="parent">

            <EditText
                android:background="@color/transparent"
                android:id="@+id/sv_provider"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/text_size_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_margin_extra_extra_large"
...
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/provider_name" />

                <TextView
                    android:id="@+id/provider_name"
                    style="?android:attr/dropDownItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:ellipsize="marquee"
                    android:gravity="start|center_vertical"
                    android:singleLine="true"
                    android:text="@string/no_results_found"
                    android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>


...
                        android:textSize="@dimen/text_size_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_sending_following_info_label" />

                    <TextView
                        android:id="@+id/tv_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/content_padding_small"
                        android:text="@{mobile}"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
...
